Fixed margin in footer when on mobile

--- a/css/overrides.css
+++ b/css/overrides.css
@@ -52,3 +52,9 @@
     width: 97%;
     display: inline-block;
 }
+
+@media only screen and (max-width: 40em) {
+    .copyright .copy {
+        margin-top: 2rem;
+    }
+}    
